--- a/chess-meeting-frontend/package.json
+++ b/chess-meeting-frontend/package.json
@@ -8,7 +8,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@mui/icons-material": "^5.0.5",
+    "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.0.6",
     "@syncfusion/ej2-base": "^19.3.53",
     "@syncfusion/ej2-react-schedule": "^19.3.48",
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.3",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.29.1",
