--- a/chess-meeting-frontend/package.json
+++ b/chess-meeting-frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.29.1",
